# aruco_detection

./: CMakeLists.txt  aruco_detection.kdev4
aruco_calibration/: calib_parameters_wiko_fever  charuco_params
include/: .ArucoDetector.hpp.kate-swp  .CameraManager.hpp.kate-swp  ArucoDetector.hpp
src/: .ArucoDetector.cpp.kate-swp  .main.cpp.kate-swp  ArucoDetector.cpp  main.cpp
